--- a/app/resources/styles/_global.css
+++ b/app/resources/styles/_global.css
@@ -4,7 +4,6 @@
 body {
   background-color: #fff;
   margin: 0;
-  font: 13px/20px normal Helvetica, Arial, sans-serif;
   color: #4F5155;
   overflow: hidden;
 }
@@ -15,6 +14,8 @@ a {
   font-weight: normal;
 }
 
-.logo {
-  width: 50px;
+* {
+  font-family: 'Kanit', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
 }
